--- a/Pups's/Beorg/Projects/уБрИр/УбРиР Общ..md
+++ b/Pups's/Beorg/Projects/уБрИр/УбРиР Общ..md
@@ -9,8 +9,8 @@
 |                     |                     |              | [[UBrir AUTO Glosarii]]                                    |     |
 |                     |                     |              |                                                            |     |
 
-<mark style="background: #A2D278;">[[уБрир Правки и вопросы]]
-</mark>
+[[уБрир Правки и вопросы]]
+
 ---
 Овечкина Елена - почта [ovechkinae@ubrr.ru](mailto:ovechkinae@ubrr.ru), Тел.: 8-922-613-66-60 (телеграмм)
 
