--- a/Pups's/Beorg/Projects/уБрИр/УбРиР Общ..md
+++ b/Pups's/Beorg/Projects/уБрИр/УбРиР Общ..md
@@ -9,7 +9,7 @@
 |                     |                     |              | [[UBrir AUTO Glosarii]]                                    |     |
 |                     |                     |              |                                                            |     |
 
-[[уБрир Правки и вопросы]]
+==[[уБрир Правки и вопросы]]==
 
 ---
 Овечкина Елена - почта [ovechkinae@ubrr.ru](mailto:ovechkinae@ubrr.ru), Тел.: 8-922-613-66-60 (телеграмм)
