--- a/Pups's/Beorg/Projects/уБрИр/Убрир Правки и вопросы/Письмо Елене 22.04.md
+++ b/Pups's/Beorg/Projects/уБрИр/Убрир Правки и вопросы/Письмо Елене 22.04.md
@@ -1,6 +1,8 @@
 ### Письмо по вопросу резки: 
 Добрый день, Елена! 
-Возник такой вопрос насчет проекта УБРиР Ипотеки, некоторые комплекты неправильно распознаются из-за того что вы начали использовать новую анкету ВТБ, прикладываю файлы с изменениями. Нам нужно понимать какую анкету вы будете использовать в дальнейшем, если вы перешли на новую, то мы просто настроим контур проекта на новую анкету. ![[Новая версия загружаемого шаблона.pdf]]
+Возник такой вопрос насчет проекта УБРиР Ипотеки, некоторые комплекты неправильно распознаются из-за того что вы начали использовать новую анкету ВТБ, прикладываю файлы с изменениями. Нам нужно понимать какую анкету вы будете использовать в дальнейшем, если вы перешли на новую, то нам нужно  настроить контур проекта на новую анкету. ![[Новая версия загружаемого шаблона.pdf]]
 ![[Старая версия загружаемого шаблона .pdf]] 
 
 ### Вопрос по Глоссарию 
+Добрый день, Елена!
+Исправили Глоссарий, все исправление которые были отмечены проработаны и выделены зеленым цветом, специально оставили замечания которые вы внесли, чтобы вы понимали что именно исправлено. Также остался  вопрос в "FATCA и анкета-заявление" было написано добавить поле со сверкой "дата подписания", но в таблице уже есть сверка "дата подписания"
