--- a/Pups's/Beorg/Projects/уБрИр/Убрир АВТО/УБРИР Авто.md
+++ b/Pups's/Beorg/Projects/уБрИр/Убрир АВТО/УБРИР Авто.md
@@ -1,1 +1,10 @@
 [[beorg/api's/Тестовый API УБРИР 100 символов]]
+
+## ЧАСЫ Аналитик:
+1. Внутренняя оптимизация в рамках выхода на целевые показатели рентабельности и SLA - 12 часов (по 3 часа в неделю)  
+2. Контроль выставленных настроек по проекту и поддержание работоспособности проекта, внесение правок при обнаруженных ошибках/обновлениях, ведение статистических файлов и бюджетов - 6 часов (по 1,5 часа в неделю)  
+3. Коммуникация с заказчиками по рабочим вопросам - 4 часа(по 1 часу в неделю) 
+4. Еженедельные встречи внешние - 4 часа(по 1 часу в неделю)  
+5. Закрытие месяца и предоставление отчетов - 3 часа  
+6. Анализ рентабельности по итогам месяца - 1 час  
+7. Резерв на доп запросы как внутренние так и внешние - 2 часа (P.S. они есть практически постоянно)
