--- a/Pups's/Beorg/Projects/уБрИр/Убрир Правки и вопросы/Письмо Елене 22.04.md
+++ b/Pups's/Beorg/Projects/уБрИр/Убрир Правки и вопросы/Письмо Елене 22.04.md
@@ -1,8 +1,11 @@
 ### Письмо по вопросу резки: 
+
 Добрый день, Елена! 
-Возник такой вопрос насчет проекта УБРиР Ипотеки, некоторые комплекты неправильно распознаются из-за того что вы начали использовать новую анкету ВТБ, прикладываю файлы с изменениями. Нам нужно понимать какую анкету вы будете использовать в дальнейшем, если вы перешли на новую, то нам нужно  настроить контур проекта на новую анкету. ![[Новая версия загружаемого шаблона.pdf]]
+С недавнего времени заметили что немного изменился шаблон Анкеты ВТБ. В связи с этим она некорректно режется (увеличивая время распознавания). Перед тем как шаблон поменять, решил уточнить будет ли использоваться новый шаблон или старый тоже будет встречаться. Для понимания приложил новый и старый вариант шаблона.  
+
+![[Новая версия загружаемого шаблона.pdf]]
 ![[Старая версия загружаемого шаблона .pdf]] 
 
 ### Вопрос по Глоссарию 
 Добрый день, Елена!
-Исправили Глоссарий, все исправление которые были отмечены проработаны и выделены зеленым цветом, специально оставили замечания которые вы внесли, чтобы вы понимали что именно исправлено. Также остался  вопрос в "FATCA и анкета-заявление" было написано добавить поле со сверкой "дата подписания", но в таблице уже есть сверка "дата подписания"
+Исправили Глоссарий, все исправления, которые были отмечены проработаны. Они выделены зеленым цветом, специально оставили замечания которые Вы внесли, чтобы Вы понимали что именно исправлено. Также остался  вопрос в "FATCA и анкета-заявление" было написано добавить поле со сверкой "дата подписания", но в таблице уже есть сверка "дата подписания"
