--- a/Pups's/Beorg/Projects/уБрИр/Убрир АВТО/УБРИР Авто.md
+++ b/Pups's/Beorg/Projects/уБрИр/Убрир АВТО/УБРИР Авто.md
@@ -1,10 +1,19 @@
 [[beorg/api's/Тестовый API УБРИР 100 символов]]
 
 ## ЧАСЫ Аналитик:
-1. Внутренняя оптимизация в рамках выхода на целевые показатели рентабельности и SLA - 12 часов (по 3 часа в неделю)  
-2. Контроль выставленных настроек по проекту и поддержание работоспособности проекта, внесение правок при обнаруженных ошибках/обновлениях, ведение статистических файлов и бюджетов - 6 часов (по 1,5 часа в неделю)  
-3. Коммуникация с заказчиками по рабочим вопросам - 4 часа(по 1 часу в неделю) 
-4. Еженедельные встречи внешние - 4 часа(по 1 часу в неделю)  
-5. Закрытие месяца и предоставление отчетов - 3 часа  
-6. Анализ рентабельности по итогам месяца - 1 час  
-7. Резерв на доп запросы как внутренние так и внешние - 2 часа (P.S. они есть практически постоянно)
+Внутренняя оптимизация - 1 ч 
+Коммуникация с заказчиком - 2 ч (Дополнительные вопросы)
+Внутренние встречи по обсуждению процесса обработки, выявления слабых мест и точек возможной оптимизации 2 часа (0,5 ч в неделю) 
+Контроль настроек проекта - 3 ч (Внедрения дополнительных масок, формирование дополнительных словарей, отслеживание сбоев на платформе и оперативное реагирование) 
+Анализ рентабельности - 1 ч  
+Закрытие месяца - 3 ч (Отчеты по каждому комплекту, формирование его вручную аналитиком запросами к базе, проверка) 
+Резерв на дополнительные запросы - 2 ч (Важный запас на внезапно возникающие вопросы от Заказчика в чате, обсуждение по возможным доработкам и их оценка)
+
+
+
+Михаил, приветствую.
+По нашему опыту, подобные проекты даже после запуска имеют много подводных камней, а также желания Заказчика обсудить множество нюансов и возможных доработок, которые также занимают время.
+Со своей стороне мы показываем оценку реальных часов без занижения.
+Заменили 16 часов изначальных на 14 часов. Для такого процесса, как обработка документов Автокредитования - вполне разумные цифры
+На моменте запуска такого проекта далее не заканчиваются работы по анализу контуров, поиска решений по их оптимизации, плотной работы с Заказчиком, оперативные ответы на его запросы.
+По опыту общения с Заказчиком Убрир, это активный и неравнодушный, учувствует в обсуждении и понимает сам процесс.
