--- a/Pups's/Beorg/Projects/уБрИр/УбРиР Ип (1023)/Задачи убрир ИП.md
+++ b/Pups's/Beorg/Projects/уБрИр/УбРиР Ип (1023)/Задачи убрир ИП.md
@@ -1,3 +1,5 @@
 
 https://tracker.dev.beorg.ru/issues/27000
 https://tracker.dev.beorg.ru/issues/28926
+[[Beorg/Projects/уБрИр/УбРиР Ип (1023)/Dict|Dict]]
+
