--- a/Pups's/Beorg/Projects/уБрИр/УбРиР Общ..md
+++ b/Pups's/Beorg/Projects/уБрИр/УбРиР Общ..md
@@ -3,7 +3,7 @@
 
 | 1023                | 1119                |              |                                                            |             |
 | ------------------- | ------------------- | ------------ | ---------------------------------------------------------- | ----------- |
-| [[УбРиР Ип]]        | [[Убрир ДК]]        | [[Убрир кк]] | [[Beorg/Projects/уБрИр/Убрир АВТО/УБРИР Авто\|УБРИР Авто]] | [[ДДу Дкп]] |
+| [[УбРиР Ип]]        | [[Убрир ДК]]        | [[Убрир кк]] | [[УБРИР Авто|УБРИР Авто]] | [[ДДу Дкп]] |
 | [[Убрир ИП Бюджет]] | [[Убрир ДК бюджет]] |              | [[УБРир АВТо Бюджет]]                                      |             |
 | [[Задачи убрир ИП]] |                     |              | [[Анкета ОКАМИ.pdf]]                                       |             |
 |                     |                     |              | [[UBrir AUTO Glosarii]]                                    |             |
