--- a/Pups's/Beorg/Projects/уБрИр/УбРИр ОБЩ/УБРИР дДу.ДкП/ДДу Дкп.md
+++ b/Pups's/Beorg/Projects/уБрИр/УбРИр ОБЩ/УБРИР дДу.ДкП/ДДу Дкп.md
@@ -6,6 +6,6 @@
 
 ![[2024_ПАО_КБ_УБРиР_Задание_№7_к_Договору_№_34216_драфт_1_7 (4).docx]]
 
-![[03.05.24.docx]]
+![[03.05.24 1.docx]]
 
 ![[06.05.24.docx]]
