--- a/Pups's/Beorg/Projects/уБрИр/УбРиР Общ..md
+++ b/Pups's/Beorg/Projects/уБрИр/УбРиР Общ..md
@@ -13,7 +13,7 @@
 ==[[уБрир Правки и вопросы]]==
 
 ---
-Овечкина Елена - почта [ovechkinae@ubrr.ru](mailto:ovechkinae@ubrr.ru), Тел.: 8-922-613-66-60 (телеграмм)
+Овечкина Елена - почта ovechkinae@ubrr.ru , Тел.: 8-922-613-66-60 (телеграмм)
 
 ---
 Активности:  
