--- a/Pups's/Beorg/Quest/Письмо по задаче ОМК 28112.md
+++ b/Pups's/Beorg/Quest/Письмо по задаче ОМК 28112.md
@@ -57,3 +57,5 @@
   6. Ответ на вопрос не понятен, примеров нет, атрибутов нет.
   7. От заказчика необходима логика и список должностей, принадлежности к гос. службе 
   8. Просьба уточнить, как часто, какие именно справочники заказчик может нам предоставить, есть ли контакт технического специалиста. Обсудим доработку.
+## Third: 
+- 
