--- a/Pups's/Beorg/API's/Велес-строй мой токин.md
+++ b/Pups's/Beorg/API's/Велес-строй мой токин.md
@@ -13,3 +13,9 @@ Machine UID - RLIXW63DADDNFYUKCJUEDT68HGOCJPMH7118KDPH
 Точка загрузки - 2
 Token - ac4eb0d74127f71aa2c0ba1630f02c44
 Machine UID - KE7FPNSIEBO6B7P12HU3QNRTTTDQCI3T2A0AHL9A
+
+## EDU:
+Проект - 24VLS_MAST_TEST
+Точка загрузки - 2
+Token - 86575e2da781f8b4926da99edee35d23
+Machine UID - 7QUUQFYJAS7XTPHTYTYWFP0QTXM5CRE6YNC7ZZHZ
