--- a/Pups's/Beorg/Projects/уБрИр/УбРиР Общ..md
+++ b/Pups's/Beorg/Projects/уБрИр/УбРиР Общ..md
@@ -1,16 +1,17 @@
 
 ---
 
-| 1023                | 1119                |              |                         |             |
-| ------------------- | ------------------- | ------------ | ----------------------- | ----------- |
-| [[УбРиР Ип]]        | [[Убрир ДК]]        | [[Убрир кк]] | [[УБРИР Авто]]          | [[ДДу Дкп]] |
-| [[Убрир ИП Бюджет]] | [[Убрир ДК бюджет]] |              | [[УБРир АВТо Бюджет]]   |             |
-| [[Задачи убрир ИП]] |                     |              | [[Анкета ОКАМИ.pdf]]    |             |
-|                     |                     |              | [[UBrir AUTO Glosarii]] |             |
-| 20UB00              | 23UBRD00            |              |                         |             |
-|                     |                     |              |                         |             |
+| 1023                  | 1119                |              |                         |             |
+| --------------------- | ------------------- | ------------ | ----------------------- | ----------- |
+| [[УбРиР Ип]]          | [[Убрир ДК]]        | [[Убрир кк]] | [[УБРИР Авто]]          | [[ДДу Дкп]] |
+| [[Убрир ИП Бюджет]]   | [[Убрир ДК бюджет]] |              | [[УБРир АВТо Бюджет]]   |             |
+| [[Задачи убрир ИП]]   |                     |              | [[Анкета ОКАМИ.pdf]]    |             |
+| [[UBrir IP Выгрузка]] |                     |              | [[UBrir AUTO Glosarii]] |             |
+|                       |                     |              |                         |             |
+| 20UB00                | 23UBRD00            |              |                         |             |
 ==[[Убрири ТОкени]]==
 ==[[уБрир Правки и вопросы]]==
+
 
 ---
 Овечкина Елена - почта ovechkinae@ubrr.ru , Тел.: 8-922-613-66-60 (телеграмм)
