--- a/Pups's/Beorg/Projects/уБрИр/УбРИр ОБЩ/Убрири ККK/Убрир кк.md
+++ b/Pups's/Beorg/Projects/уБрИр/УбРИр ОБЩ/Убрири ККK/Убрир кк.md
@@ -1,21 +1,23 @@
 https://docs.google.com/spreadsheets/d/173qtYa_LyoECgttfvlp1N5fkJ3FPjnjysO5dtN-lrys/edit#gid=1697710229
 
-| 1   | Анкета заявителя                                                 |
-| --- | ---------------------------------------------------------------- |
-| 2   | Анкета-заявление                                                 |
-| 3   | Согласие на запрос БКИ                                           |
-| 4   | Заявление о предоставлении кредита                               |
-| 5   | Индивидуальные условия Договора потребительного кредита (ИУ ДПК) |
-| 6   | Согласие заемщика на списание со счетов                          |
-| 7   | Согласие на обработку персональных данных                        |
-| 8   | Согласие на получение электронного средства платежа              |
-| 9   | Опросный лист FATCA                                              |
-| 10  | Опросный лист CRS                                                |
-| 11  | Заявление о присоединении к Правилам КБО/ доп.соглашение к ДКБО  |
-| 12  | Паспорт РФ                                                       |
-| 13  | Фото клиента с картой                                            |
-| 14  | Пин-конверт                                                      |
-| 15  | Заявление о предоставлении доп услуг                             |
 
-
+|     |              |                                                |
+| --- | ------------ | ---------------------------------------------- |
+| 1   | 24UBRK_MAST  | Сортировка                                     |
+| 2   | 24UBRK_PSS   | ПАСПОРТ РФ                                     |
+| 3   | 24UBRK_CUST  | Анкета заявителя                               |
+| 4   | 24UBRK_QUEST | АНЕКТА ЗАЯВЛЕНИЕ                               |
+| 5   | 24UBRK_BKI   | СОГЛАСИЕ НА ЗАПРОС БКИ                         |
+| 6   | 24UBRK_CRED  | ЗАЯВЛЕНИЕ О ПРЕДОСТАВЛЕНИИ КРЕДИТА             |
+| 7   | 24UBRK_DPK   | ИНДИВИДУАЛЬНЫЕ УСЛОВИЯ ДПК                     |
+| 8   | 24UBRK_SPIS  | СОГЛАСИЕ ЗАЕМЩИКА НА СПИСАНИЕ СО СЧЕТОВ        |
+| 9   | 24UBRK_PD    | СОГЛАСИЕ НА ОБРАБОТКУ ПЕРСОНАЛЬНЫХ ДАННЫХ      |
+| 10  | 24UBRK_ELEC  | СОГЛАСИЕ НА ПОЛУЧЕНИЕ ЭЛЕКТРОННОГО СРЕДСТВА ПЛ |
+| 11  | 24UBRK_FATCA | ОПРОСНЫЙ ЛИСТ FATCA                            |
+| 12  | 24UBRK_CRS   | ОПРОСНЫЙ ЛИСТ CRS                              |
+| 13  | 24UBRK_KBO   | ЗАЯВЛЕНИЕ О ПРИСОЕДИНЕНИИ К ПРАВИЛАМ КБО/ДКБО  |
+| 14  | 24UBRK_DOP   | ФОТО КЛИЕНТА С КАРТОЙ                          |
+| 15  | 24UBRK_PIN   | ПИН-КОНВЕРТ                                    |
+| 16  | 24UBRK_FOTO  | ЗАЯВЛЕНИЕ О ПРЕДОСТАВЛЕНИИ ДОП УСЛУГ           |
+| 17  | 24UBRK_BRK   | ИНЫЕ ДОКУМЕНТЫ                                 |
 
