--- a/Pups's/Beorg/Projects/уБрИр/УбРИр ОБЩ/уБрИр ДК (1119)/Убрир ДК.md
+++ b/Pups's/Beorg/Projects/уБрИр/УбРИр ОБЩ/уБрИр ДК (1119)/Убрир ДК.md
@@ -2,14 +2,14 @@
 
 ---
 
-| 23UBRD00  | сортировка               | SLA - 20 Минут |
-| --------- | ------------------------ | -------------- |
-| 23UBRD01  | Паспорт                  |                |
-| 23UBRD02  | Анкета-заявление         |                |
-| 23UBRD03  | Заявление о п к Пр КБО   |                |
-| 23UBRD04  | Опросный лист CRS        |                |
-| 23UBRD05  | Опросный лист FATCA      |                |
-| 23UBRD06  | Заявление на изм ПД      |                |
-| 23UBRD07  | Фото клиента с карточкой |                |
-| 23UBRD08  | Пин-конверт              |                |
-| 23UBRD_NT | Нетиповые документы      |                |
+| 23UBRD00  | сортировка               | SLA - 20 Минут |     |
+| --------- | ------------------------ | -------------- | --- |
+| 23UBRD01  | Паспорт                  |                |     |
+| 23UBRD02  | Анкета-заявление         |                |     |
+| 23UBRD03  | Заявление о п к Пр КБО   |                |     |
+| 23UBRD04  | Опросный лист CRS        |                |     |
+| 23UBRD05  | Опросный лист FATCA      |                |     |
+| 23UBRD06  | Заявление на изм ПД      |                |     |
+| 23UBRD07  | Фото клиента с карточкой |                |     |
+| 23UBRD08  | Пин-конверт              |                |     |
+| 23UBRD_NT | Нетиповые документы      |                |     |
