--- a/Pups's/Beorg/Projects/уБрИр/УбРиР Общ..md
+++ b/Pups's/Beorg/Projects/уБрИр/УбРиР Общ..md
@@ -5,10 +5,10 @@
 | --------------------- | ------------------- | ------------ | ----------------------- | ----------- |
 | [[УбРиР Ип]]          | [[Убрир ДК]]        | [[Убрир кк]] | [[УБРИР Авто]]          | [[ДДу Дкп]] |
 | [[Убрир ИП Бюджет]]   | [[Убрир ДК бюджет]] |              | [[УБРир АВТо Бюджет]]   |             |
-| [[Задачи убрир ИП]]   |                     |              | [[Анкета ОКАМИ.pdf]]    |             |
+| [[Задачи убрир ИП]]   |                     | [[Сверки]]   | [[Анкета ОКАМИ.pdf]]    |             |
 | [[UBrir IP Выгрузка]] |                     |              | [[UBrir AUTO Glosarii]] |             |
 |                       |                     |              |                         |             |
-| 20UB00                | 23UBRD00            |              |                         |             |
+| 20UB00                | 23UBRD00            | 24UBRK_MAST  |                         |             |
 ==[[Убрири ТОкени]]==
 ==[[уБрир Правки и вопросы]]==
 
