--- a/Pups's/Beorg/Projects/уБрИр/УбРИр ОБЩ/Убрири ККK/Убрир кк.md
+++ b/Pups's/Beorg/Projects/уБрИр/УбРИр ОБЩ/Убрири ККK/Убрир кк.md
@@ -1,7 +1,7 @@
 https://docs.google.com/spreadsheets/d/173qtYa_LyoECgttfvlp1N5fkJ3FPjnjysO5dtN-lrys/edit#gid=1697710229
 
 
-|     |              |                                                |
+| №   | Project      | name                                           |
 | --- | ------------ | ---------------------------------------------- |
 | 1   | 24UBRK_MAST  | Сортировка                                     |
 | 2   | 24UBRK_PSS   | ПАСПОРТ РФ                                     |
