--- a/Pups's/Beorg/Projects/уБрИр/УбРИр ОБЩ/уБрир Правки и вопросы.md
+++ b/Pups's/Beorg/Projects/уБрИр/УбРИр ОБЩ/уБрир Правки и вопросы.md
@@ -16,3 +16,13 @@ _________
 	Доставка 
 	9910, 9908, 9903, 9897, 9893, 9887, 9884, 9883, 9880, 9878, 9874, 9872, 9871, 9867, 9863, 9862, 9850, 9846, 9845, 9843, 9840, 9829, 9828, 9826, 9823, 9820, 9808, 9802, 9801, 9797, 9793, 9785, 9784, 9783, 9781, 9777, 9774, 9773, 9771, 9769, 9768, 9762, 9757, 9756, 9753, 9750
 	 [[проблема с загрузкой]]
+---
+
+## Message To Ubrir 
+Добрый день! 
+сразу прикладываю Глосссрий: https://docs.google.com/spreadsheets/d/1NAjIFnXdPlClCR8l06Rd9DSYPN-RI9W1gaGoHn4ypz4
+По документам в которых отсутсвуют атрибуты для сверок 
+
+Опросный лист CRS: Адрес (registration_crs)
+КБО/ДКБО: адрес, фамилия, имя, отчество (adress_kbo, first_name, last_name, middle_name )
+Согласие на списание со счетов: номер, номер банковского счета (number, bank_account_num)
