--- a/Pups's/Beorg/Projects/уБрИр/УбРиР Общ..md
+++ b/Pups's/Beorg/Projects/уБрИр/УбРиР Общ..md
@@ -1,14 +1,14 @@
 
 ---
 
-| 1023                  | 1119                |              |                         |             |
-| --------------------- | ------------------- | ------------ | ----------------------- | ----------- |
-| [[УбРиР Ип]]          | [[Убрир ДК]]        | [[Убрир кк]] | [[УБРИР Авто]]          | [[ДДу Дкп]] |
-| [[Убрир ИП Бюджет]]   | [[Убрир ДК бюджет]] |              | [[УБРир АВТо Бюджет]]   |             |
-| [[Задачи убрир ИП]]   |                     | [[Сверки]]   | [[Анкета ОКАМИ.pdf]]    |             |
-| [[UBrir IP Выгрузка]] |                     |              | [[UBrir AUTO Glosarii]] |             |
-|                       |                     |              |                         |             |
-| 20UB00                | 23UBRD00            | 24UBRK_MAST  |                         |             |
+| 1023                  | 1119                   |              |                         |             |
+| --------------------- | ---------------------- | ------------ | ----------------------- | ----------- |
+| [[УбРиР Ип]]          | [[Убрир ДК]]           | [[Убрир кк]] | [[УБРИР Авто]]          | [[ДДу Дкп]] |
+| [[Убрир ИП Бюджет]]   | [[Убрир ДК бюджет]]    |              | [[УБРир АВТо Бюджет]]   |             |
+| [[Задачи убрир ИП]]   |                        | [[Сверки]]   | [[Анкета ОКАМИ.pdf]]    |             |
+| [[UBrir IP Выгрузка]] | [[ubriri DK выгрузка]] |              | [[UBrir AUTO Glosarii]] |             |
+|                       |                        |              |                         |             |
+| 20UB00                | 23UBRD00               | 24UBRK_MAST  |                         |             |
 ==[[Убрири ТОкени]]==
 ==[[уБрир Правки и вопросы]]==
 
