--- a/Pups's/Beorg/Projects/уБрИр/УбРИр ОБЩ/Убрири ККK/Сверки.md
+++ b/Pups's/Beorg/Projects/уБрИр/УбРИр ОБЩ/Убрири ККK/Сверки.md
@@ -43,7 +43,7 @@
     |reg_date|Дата регистрации|||
     
 - questionnaire_stat_with_passport
-    
+
     |questionnaire_stat_with_passport|Анкета-заявление с паспортом|||
     |---|---|---|---|
     |first_name|Имя|||
@@ -60,13 +60,13 @@
     
 - stat_kbo_with_quest_stat
     
-    |stat_kbo_with_quest_stat|КБО и анкета-заявление|||
+    |stat_kbo_with_quest_stat|КБО и анкета-заявление|
     |---|---|---|---|
-    |first_name|Имя|||
-    |middle_name|Отчество|||
-    |last_name|Фамилия|||
-    |number_dp|номер ДП|||
-    |date|дата подписания|||
+    |first_name|Имя|
+    |middle_name|Отчество|
+    |last_name|Фамилия|
+    |number_dp|номер ДП|
+    |date|дата подписания|
     
 - crs_list_with_quest_stat
     
