--- a/Pups's/Beorg/Projects/уБрИр/УбРИр ОБЩ/Убрири ККK/Убрир кк.md
+++ b/Pups's/Beorg/Projects/уБрИр/УбРИр ОБЩ/Убрири ККK/Убрир кк.md
@@ -16,8 +16,8 @@ https://docs.google.com/spreadsheets/d/173qtYa_LyoECgttfvlp1N5fkJ3FPjnjysO5dtN-l
 | 11  | 24UBRK_FATCA | ОПРОСНЫЙ ЛИСТ FATCA                            |
 | 12  | 24UBRK_CRS   | ОПРОСНЫЙ ЛИСТ CRS                              |
 | 13  | 24UBRK_KBO   | ЗАЯВЛЕНИЕ О ПРИСОЕДИНЕНИИ К ПРАВИЛАМ КБО/ДКБО  |
-| 14  | 24UBRK_DOP   | ФОТО КЛИЕНТА С КАРТОЙ                          |
+| 14  | 24UBRK_FOTO  | ФОТО КЛИЕНТА С КАРТОЙ                          |
 | 15  | 24UBRK_PIN   | ПИН-КОНВЕРТ                                    |
-| 16  | 24UBRK_FOTO  | ЗАЯВЛЕНИЕ О ПРЕДОСТАВЛЕНИИ ДОП УСЛУГ           |
+| 16  | 24UBRK_DOP   | ЗАЯВЛЕНИЕ О ПРЕДОСТАВЛЕНИИ ДОП УСЛУГ           |
 | 17  | 24UBRK_BRK   | ИНЫЕ ДОКУМЕНТЫ                                 |
 
