--- a/Pups's/Beorg/Projects/Мега-хит/Закрытие.md
+++ b/Pups's/Beorg/Projects/Мега-хит/Закрытие.md
@@ -1,3 +1,4 @@
+\\Srvmain\Производственный отдел\Информация\Количество выгруженных анкет
 ```
 SELECT ID, COUNT(*)
 FROM ClientClusterMGHT.Questionaries q
