--- a/Pups's/Beorg/Projects/НИОПИК/Общ..md
+++ b/Pups's/Beorg/Projects/НИОПИК/Общ..md
@@ -3,3 +3,4 @@
 | Объясн что на чертежах | [[НА чертеже]] |
 | ---------------------- | -------------- |
 | Token                  | [[Token]]      |
+| Черновик               | [[Лист]]       |
